# scrapy-gzip-exporters

./: LICENSE  README.md  pyproject.toml  scrapy_gzip_exporters.py
